# sarvani_sweets_financial_automation_v1_crewai-project

./: GOOGLE_GEMINI_SETUP.md  INTEGRATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  pyproject.toml
frontend/: README.md  package-lock.json  package.json
frontend/src/app/: globals-old.css  globals.css  layout.tsx  page-enterprise-old.tsx  page-futuristic.tsx  page-new.tsx  page.tsx
frontend/src/app/audit/: page.tsx
frontend/src/app/branches/: page.tsx
frontend/src/app/components-demo/: page.tsx
frontend/src/app/gst/: page.tsx
frontend/src/app/invoices/: page.tsx
frontend/src/app/reports/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/components/: metric-card.tsx  navbar.tsx  page-header.tsx  sidebar.tsx
frontend/src/components/creative-tim/blocks/: crypto-sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  table.tsx
frontend/src/lib/: mock-data.ts  utils.ts
knowledge/: user_preference.txt
src/sarvani_sweets_financial_automation/: crew.py  main.py
src/sarvani_sweets_financial_automation/config/: agents.yaml  tasks.yaml
